<resources>
    <string name="app_name">tgNBA</string>
    <string name="title_home">Home</string>
    <string name="title_players">Players</string>
    <string name="name_title">Name</string>
    <string name="city_title">City</string>
    <string name="conference_title">Conference</string>
    <string name="search">Search</string>
    <string name="back_home">&lt; Home</string>
    <string name="arrow_as_selection_indicator">arrow as selection indicator</string>
    <string name="no_internet">No internet connection. Try later.</string>
    <string name="first_name_title">First Name</string>
    <string name="last_name_title">Last Name</string>
    <string name="team_title">Team</string>
    <string name="provide_search_term">Nothing found. \n Provide search term</string>
    <string name="home_name">Home Name</string>
    <string name="home_score">Home Score</string>
    <string name="visitor_name">Visitor Name</string>
    <string name="visitor_score">Visitor Score</string>
</resources>