<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.player.PlayerFragment">

    <TextView
        android:id="@+id/text_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_players"
        android:textAlignment="center"
        android:textColor="@color/secondaryTextColor"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_player_search"
        android:imeOptions="actionDone|actionSend|actionGo"
        android:singleLine="true"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="yes"
        android:background="@drawable/btn_sort_bg"
        android:gravity="center"
        android:hint="@string/search"
        android:inputType="textPersonName"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_player" />

    <include
        android:id="@+id/incHeaderPlayer"
        layout="@layout/header_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_player_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_player_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:paddingVertical="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incHeaderPlayer"
        tools:listitem="@layout/item_player" />

    <TextView
        android:id="@+id/tv_provide_search_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provide_search_term"
        android:visibility="visible"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/rv_player_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_player_search" />


</androidx.constraintlayout.widget.ConstraintLayout>